syntax = "proto3";

option go_package = "trening.v1";

service TreningService {
  //Список всех тренировок в приложении
  rpc GetTreningList(GetTreningListRequest) returns (GetTreningListResponse);
  //Список тренировок пользователя
  rpc GetUserTrenings(AddTreningRequest) returns (GetTreningListResponse);
  //Добавление в список тренировок пользавателя
  rpc AddTreningUser(AddTreningRequest) returns (GetTreningListResponse);
  //Удаление тренировки у пользователя
  rpc DeletedTreningUser(AddTreningRequest) returns (GetTreningListResponse);
  //Получение текущей информации по тренировке
  //TODO возможно данный метод будет удален после связки с приложением из-за не надобности
  rpc GetCurrentTrening(TreningIdRequest) returns (GetCurrentTreningResponse);
}

// GetTreningList
message GetTreningListRequest {
  int32 page = 1;
  int32 offset = 2;
}

message  GetTreningListResponse {
  repeated GetTreningList treningList = 1;
}

message GetTreningList {
  int64 id = 1;
  string title = 2;
  string description = 3;
  string image = 4;
  float  raiting = 5;
  Trener trenerInfo = 6;
  repeated TrenningInfo trenningInfo = 7;
}

message GetCurrentTreningResponse {
  int64 id = 1;
  string title = 2;
  string description = 3;
  string image = 4;
  float  raiting = 5;
  Trener trenerInfo = 6;
  repeated TrenningInfo trenningInfo = 7;
}

message Trener {
  string name = 1;
  string lastName = 2;
}

message TrenningInfo {
  string title = 1;
  string avatar = 2;
  repeated int32 approach = 3;
}

// GetCurrentTrening
message TreningIdRequest {
  int64 id = 1;
}

// AddTreningUser
message AddTreningRequest {
  int64 id = 1;
  int64 userId = 2;
}

